<resources>
    <string name="app_name">在读</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="user_name">Yetwish_野鬼</string>
    <string name="user_intro">读万卷书，行万里路。</string>

    <string name="note_title">读书笔记</string>
    <string name="read_title">读过的书</string>
    <string name="setting">设置</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>


    <string name="auto_searching">自动扫描</string>
    <string name="chose_manual">手动选择</string>

    <string name="note_book_title">读书笔记</string>
    <string name="note_create">创建笔记</string>
    <string name="note_edit">编辑笔记</string>


    <string name="note_favorite">杂了个记</string>
    <string name="note_book">读书笔记</string>

    <string name="note_book_intro_default">创建该笔记本的人很懒，没有添加任何简介...</string>
    <string name="hint_note_book_intro">简介</string>
    <string name="create_new_note_book">新的笔记本</string>
    <string name="hint_note_book_name">名字</string>
    <string name="toast_empty_name">名字不能为空</string>

    <string name="delete_book_title">确认移除</string>
    <string name="delete_notebook_title">确认删除笔记本</string>
    <string name="delete_note_title">确认删除笔记</string>

    <string name="delete_book_content">将清除该书籍的读书进度和书签信息。将会保留该书相关笔记</string>
    <string name="delete_notebook_content">将清除该笔记本中的所有笔记</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>


    <string name="hint_note_title">请在这里输入标题</string>
    <string name="hint_note_content">记...</string>

    <string name="menu_note_edit_finish">完成</string>
    <string name="menu_note_add">添加笔记</string>

    <string name="reader_title">Reading</string>

    <string name="search_title">扫描结果</string>
    <string name="explorer_title">导入书籍</string>
    <string name="add_book">加入读书计划</string>
    <string name="dir_example">\\ Android \\ app \\ demo \\ E.txt </string>

    <string name="book_name_exam">Le Petit Prince</string>
    <string name="book_author_exam">[法] 圣埃克苏佩里 </string>

    <string name="empty_no_txt">没有找到任何.TXT文件</string>
    <string name="empty_no_file">没有TXT文件</string>

    <string name="has_added">已添加</string>

    <string name="loading">正在加载</string>
    <string name="waitForLoading">正在加载，请稍候</string>

    <string name="plz_add_note">快来添加第一份笔记吧~</string>
    <string name="plz_add_reading">快点击 + 添加读书计划吧~</string>
    <string name="empty_read">还没有读完一本书哦，快去添加读书计划吧~</string>

    <string name="finish_reading">恭喜你读完一本书啦~\(≧▽≦)/~\n\n快让眼睛休息一下吧。~</string>

    <string name="waitForAddingBook">正在添加书本信息</string>
    <string name="waitForScanning">正在扫描本地书籍</string>

    <string name="exam_book_title">大荒蛮神</string>
    <string name="pre_chapter">上一章</string>
    <string name="next_chapter">下一章</string>

    <string name="splash">——在读，轻量级阅读App</string>
    <string name="author">Dev @Yetwish_野鬼</string>

    <string name="no_more_pre_chapter">当前已经是第一章</string>
    <string name="no_more_next_chapter">当前已经是最后一章</string>


    <!--the description of images-->
    <string name="des_avatar">avatar</string>
    <string name="des_item_text">text of menu item</string>
    <string name="des_item_arrow">the right arrow</string>
    <string name="des_add_fab">add bookVo fab</string>

</resources>
