<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/menu_height"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/iv_item_icon"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginLeft="@dimen/menu_margin_left"
        android:contentDescription="@string/des_item_text"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_item_icon"
        android:layout_alignTop="@+id/iv_item_icon"
        android:layout_toRightOf="@+id/iv_item_icon"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/colorPrimaryLight" />

    <ImageView
        android:id="@+id/iv_item_arrow"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/menu_margin_left"
        android:contentDescription="@string/des_item_arrow"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_chevron_right_white_18dp" />

</RelativeLayout>