<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlReaderTopContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reader_popup_top_height"
        android:background="@color/colorReaderBarBg"
        android:paddingLeft="@dimen/menu_margin_left">

        <ImageView
            android:id="@+id/ivReaderPopIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_chevron_left_white_48dp" />

        <TextView
            style="@style/Reader_TextStyle_Title"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ivReaderPopIcon"
            android:text="@string/exam_book_title" />
    </RelativeLayout>

    <View
        android:id="@+id/midContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llReaderBottomContainer"
        android:layout_below="@+id/rlReaderTopContainer"
        android:background="@color/colorTransparent" />

    <LinearLayout
        android:id="@+id/llReaderBottomContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reader_popup_bottom_height"
        android:layout_alignParentBottom="true"
        android:background="@color/colorReaderBarBg"
        android:orientation="vertical"
        android:padding="@dimen/reader_padding">


        <RelativeLayout
            android:id="@+id/rlReaderProgressContainer"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvPreChapter"
                style="@style/Reader_TextStyle_Content"
                android:layout_centerVertical="true"
                android:text="@string/pre_chapter" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/menu_margin_left"
                android:layout_marginRight="@dimen/menu_margin_left"
                android:layout_toLeftOf="@+id/tvNextChapter"
                android:layout_toRightOf="@+id/tvPreChapter"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:max="100"
                android:progress="80"/>

            <TextView
                android:id="@+id/tvNextChapter"
                style="@style/Reader_TextStyle_Content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/next_chapter" />
        </RelativeLayout>

        <LinearLayout
            android:paddingBottom="5dp"
            android:id="@+id/llReaderMenuContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivReaderMenu"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_list_white_36dp" />

            <ImageView
                android:id="@+id/ivReaderTextSize"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_text_format_white_36dp" />


            <ImageView
                android:id="@+id/ivReaderBookMark"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_bookmark_white_36dp" />

            <ImageView
                android:id="@+id/ivReaderNote"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_create_white_36dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>